# bdex-rs

./: .gitignore  Cargo.toml  Readme.md
.github/workflows/: build.yaml
scripts/: macos_build.sh  macos_prepare.sh
src/: main.rs
